Update Classification on MNIST.ipynb

--- a/Classification on MNIST.ipynb
+++ b/Classification on MNIST.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MNIST Dataset Learning\n",
+    "# MNIST Classifier\n",
     "In this notebook you will be given an introduction to MNIST Database.  \n",
     "https://en.wikipedia.org/wiki/MNIST_database"
    ]
