--- a/X-ray Pneumonia Classifier - With CNN.ipynb
+++ b/X-ray Pneumonia Classifier - With CNN.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Pneumonia Classifier\n",
-    "This notebook we shall use CNN to train a classifier that will predict Pneumonia using x-ray's as input.\n",
+    "This notebook we will use CNN to train a classifier that will predict Pneumonia using x-ray's as input.\n",
     "Use the database from: https://www.kaggle.com/paultimothymooney/chest-xray-pneumonia  "
    ]
   },
