--- a/X-ray Pneumonia Classifier - With CNN.ipynb
+++ b/X-ray Pneumonia Classifier - With CNN.ipynb
@@ -117,8 +117,8 @@
      "output_type": "stream",
      "text": [
       "train set - normal:  1333  ,pneumonia:  3867\n",
-      "train set - normal:  226  ,pneumonia:  382\n",
-      "train set - normal:  24  ,pneumonia:  24\n",
+      "test set - normal:  226  ,pneumonia:  382\n",
+      "val set - normal:  24  ,pneumonia:  24\n",
       "Xtrain shape:  (5200, 127, 127, 1)\n",
       "Ytrain shape:  5200\n",
       "Xtest shape:  (608, 127, 127, 1)\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "<tensorflow.python.keras.callbacks.History at 0x2be3acdddc0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "       [ 13, 369]], dtype=int64)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
